added spectre ng, fixed spelling mistakes, updated formatting

--- a/bachproef-latex-sjabloon-master/bachproef/bachproef-tin.tex
+++ b/bachproef-latex-sjabloon-master/bachproef/bachproef-tin.tex
@@ -91,11 +91,11 @@
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
 
-\input{achtergrond}
+%\input{achtergrond}
 %\input{...}
 %...
 
-\input{onderzoek}
+\input{resultaten_experimenten}
 
 \input{conclusie}
 
