--- a/bachproef-latex-sjabloon-master/bachproef/conclusie.tex
+++ b/bachproef-latex-sjabloon-master/bachproef/conclusie.tex
@@ -14,3 +14,10 @@
 
 % \lipsum[76-80]
 
+Uit het onderzoek bleek dat de Meltdown/Spectre patches wel degelijk een performantieverlies introduceren. Vooral processor verbruik stijgt. Voor een webserver is het performantieverlies niet drastisch, maar bij grootschalige servers kan 5\% al zeer impactvol zijn.
+
+In het begin veroorzaakten de patches veel problemen, zoals spontane reboots maar ze zijn nu veel verbeterd met betrekking tot stabiliteit en performantie. De doorvoersnelheid van een normale webserver verliest maar 7 procent. Dat is veel minder dan eerst gedacht, sommigen voorspelden rond de 30 procent.
+
+
+
+Waar het onderzoek geen definitief antwoord op kan geven is de performantie van redis, alhoewel er weinig verschil op zit. Als we naar de responstijd zien, is de server nog perfect bruikbaar met een stijging van 1 milliseconde (van 14ms naar 15ms).
