--- a/bachproef-latex-sjabloon-master/bachproef/voorwoord.tex
+++ b/bachproef-latex-sjabloon-master/bachproef/voorwoord.tex
@@ -12,5 +12,5 @@
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
 Deze bachelorproef is geschreven in het kader van mijn scholing als Bachelor in de Toegepaste
-Informatica aan Hogeschool Gent. Deze studie gaat over de performantieimpact van meltdown- en spectre-patches. Ik heb dit onderwerp gekozen omdat ik gepassioneerd ben door de details op laag niveau van hoe moderne processors en systeemsoftware werken.
-Ik wil voornamelijk mijn promotors bedanken voor het nalezen, technische informatie en het voorstellen van het onderwerp.
+Informatica aan Hogeschool Gent. Deze studie gaat over de performantie-impact van Meltdown en Spectre patches. Ik heb dit onderwerp gekozen omdat ik gepassioneerd ben door de details op laag niveau, van hoe moderne processors en systeemsoftware werken.
+Ik wil voornamelijk mijn promotor mevrouw Van Driessche Karine en mijn co-promotor meneer Van Vreckem Bert van harte bedanken voor het voorstellen van het onderwerp, het aanreiken van de nodige technische informatie en het nalezen van deze scriptie.
