--- a/bachproef-latex-sjabloon-master/voorstel/poster/conference_poster_6.tex
+++ b/bachproef-latex-sjabloon-master/voorstel/poster/conference_poster_6.tex
@@ -51,11 +51,11 @@
 % The widths of these boxes can be easily edited to accommodate your content as you see fit
 
 \begin{minipage}[t]{0.75\linewidth}
-\VeryHuge \color{HoGentAccent1} \textbf{Titel van uw bachelorproef} \color{Black}\\ % Title
+\VeryHuge \color{HoGentAccent1} \textbf{Studie naar de performantie-impact van Spectre/Meltdown patches op Linux voor een typische workload van een webserver} \color{Black}\\ % Title
 \Huge\textit{Ondertitel (eventueel)}\\[2.4cm] % Subtitle
-\huge \textbf{Naam Voornaam, co-promotor, promotor}\\[0.5cm] % Author(s)
+\huge \textbf{Willems Karel, Bert Van Vreckem, Karine Van Driessche}\\[0.5cm] % Author(s)
 \huge Hogeschool Gent, Valentin Vaerwyckweg 1, 9000 Gent\\[0.4cm] % University/organization
-\Large \texttt{voornaam.naam@hogent.be} \\
+\Large \texttt{karel.willems.u7999@student.hogent.be} \\
 \end{minipage}
 %
 \begin{minipage}[t]{0.25\linewidth}
@@ -76,9 +76,11 @@
 \color{HoGentAccent1} % Navy color for the abstract
 
 \begin{abstract}
-It's only a model.
-You don't vote for kings. Who's that then? We found them. Ni! Ni! Ni! Ni!
-The nose? On second thoughts, let's not go there. It is a silly place. Bloody Peasant! And the hat. She's a witch! Where'd you get the coconuts?
+Dit werk is een studie van het performantieverschil van de Meltown- en Spectre-patches op een Linux webserver.
+Er werd een testopstelling opgezet voor gemakkelijk resultaten te genereren met Vagrant en Ansible. Het resultaat is data van een aantal benchmark- en monitoringstools. De resultaten worden onderzocht en er wordt gezien of ze statistisch significant zijn aan de hand van t-testen.\\
+In dit document staat er achtergrond beschreven hoe de spectre/meltdown aanvallen werken en hoe mitigaties de performantie kunnen beïnvloeden.\\
+ Deze bachelorproef bevestigd dat de patches wel degelijk performantieverlies met zich meebrengen. Dit is belangrijk voor webmasters die zich afvragen of ze nu meer rekenkracht nodig hebben. De belangrijkste impact zal zijn op werkelijk grootschalige omgevingen zoals cloud-providers, waar zelfs een toename van een paar percent van de belasting extra hardware vereist.
+
 \end{abstract}
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION
@@ -121,7 +123,7 @@ Bring her forward! I don't want to talk to you no more, you empty-headed animal 
 
 
 \begin{center}\vspace{1cm}
-\includegraphics[width=1.0\linewidth]{grail}
+\includegraphics[width=1.0\linewidth]{cpu_system.png}
 \captionof{figure}{\color{HoGentAccent5} He hasn't got shit all over him. The nose? Where'd you get the coconuts? What do you mean? We shall say 'Ni' again to you, if you do not appease us}
 \end{center}\vspace{1cm}
 
